* 2013-08-16 - jan.bauerdick@open-xchange.com

 - Fix for bug 28350: Check if another distribution list with same name already exists

* 2013-08-16 - tobias.friedrich@open-xchange.com

 - Fix for bug 28317: Invalidate all other user sessions after password change

* 2013-08-15 - marcus.klein@open-xchange.com

 - Fix for bug 28283: Need to poll the system bundle to check if shutdown was successful and extended scripting for calling shutdown process
   to reduce error output.

* 2013-08-15 - tobias.friedrich@open-xchange.com

 - Fix for bug 28260: Restrict socket binding to local loopback address only by default. 

* 2013-08-15 - thorben.betten@open-xchange.com

 - Fix for bug 28026: Allowing relative URL paths specified as a UWA widget's source URL

* 2013-08-14 - marcus.klein@open-xchange.com

 - Fix for bug 28272: Extended new graceful shutdown method with necessary checks prior to executing it.
 - Fix for bug 23141: Terminate OSGi framework and backend gracefully allowing components to remove their temporary things.
   Removing temporary files during startup because of maybe died JVM.

* 2013-08-14 - thorben.betten@open-xchange.com

 - Fix for bug 26597: Apply default charset if multipart/form-data POST request misses mail-safe encoding for non-ascii words
 - Fix for bug 26869: Added missing imports to RSS messaging bundle
 - Fix for bug 24799: Refactored parsing of FB stream content to avoid strange empty messages

* 2013-08-14 - tobias.friedrich@open-xchange.com

 - Fix for bug 28260: Disable Hazelcast's REST and Memcache client request listener services by default 

* 2013-08-13 - thorben.betten@open-xchange.com

 - Fix for bug 23992: Introduced property to disable folder caches in IMAP
 - Fix for bug 26023: Specify supported SSL protocols on secure connect attempt
 - Change for bug 27420: Handle possible unexpected EOF gracefully
 - Fix for bug 28125: Track I18nService as an optional service